fix overflow

--- a/style.css
+++ b/style.css
@@ -106,8 +106,7 @@ footer {
     justify-content: space-evenly;
     align-items: center;
     flex-flow: column;
-    height: auto;
-    width: 100vw;
+    height: 110vh;
     text-align: center;
 }
 .logo-container {
@@ -120,7 +119,7 @@ footer {
     justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
-    width: 100%;
+    width: 90vw;
 }
 .contact {
     width: 40%;
@@ -134,6 +133,9 @@ footer {
     .nav-item svg {
       display: none !important;
     }
-    
+    .navbar-brand {
+        width: 20%;
+        
+    }
     
   }
